# Game-Project

./: README.md
APLICATIE (1)/APLICATIE/: CERINTE COMPLETE.md  LICENSES.txt  PROJECT_COMPLETION.md  README.md  create_archive.py  main.py  pyproject.toml
APLICATIE (1)/APLICATIE/attached_assets/: README_1749659963211.md  _1749659963210.rep  main_1749659963210.py
APLICATIE (1)/APLICATIE/docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  GDPR.md  REQUIREMENTS_CHECKLIST.md  SECURITY.md
APLICATIE (1)/APLICATIE/output/: posts_data.csv  users_data.csv
APLICATIE (1)/APLICATIE/src/: __init__.py
APLICATIE (1)/APLICATIE/src/hangman_3d/: __init__.py  api_client.py  app.py  config.py  csv_exporter.py  data_pipeline.py  data_processor.py  logger.py  visualizer.py
APLICATIE (1)/APLICATIE/src/hangman_3d/models/: __init__.py  game.py
APLICATIE (1)/APLICATIE/src/hangman_3d/routes/: __init__.py  game.py
APLICATIE (1)/APLICATIE/src/hangman_3d/utils/: __init__.py  words.py
APLICATIE (1)/APLICATIE/templates/: index.html
APLICATIE (1)/APLICATIE/tests/: __init__.py  test_game.py  test_routes.py
